C2: Disallow definition split on MachCopySpill nodes

XMLWordPrintable

    • b09
    • Not verified

        The hs_err head is:
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/jprt/T/P1/061532.amurillo/s/hotspot/src/share/vm/opto/reg_split.cpp:1176), pid=12680, tid=2742930288
        # assert(!n->is_SpillCopy()) failed:
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0_60) (build 1.8.0_60-internal-fastdebug-20150605061532.amurillo.hs25-60-b20-set--b00)
        # Java VM: Java HotSpot(TM) Server VM (25.60-b20-fastdebug compiled mode linux-x86 )
        # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- T H R E A D ---------------

        Current thread (0xa39c5000): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=12690, stack(0xa375c000,0xa37dd000)]

        Stack: [0xa375c000,0xa37dd000], sp=0xa37d9c80, free space=503k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xe3ef5b] VMError::report_and_die()+0x17b
        V [libjvm.so+0x609cd8] report_vm_error(char const*, int, char const*, char const*)+0x68
        V [libjvm.so+0xcba99f] PhaseChaitin::Split(unsigned int, ResourceArea*)+0x4c3f
        V [libjvm.so+0x49a6cd] PhaseChaitin::Register_Allocate()+0x7dd
        V [libjvm.so+0x5871a7] Compile::Code_Gen()+0x2d7
        V [libjvm.so+0x58a5fd] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x196d
        V [libjvm.so+0x469f8b] C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x30b
        V [libjvm.so+0x598d41] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xbf1
        V [libjvm.so+0x599d7f] CompileBroker::compiler_thread_loop()+0x74f
        V [libjvm.so+0xdb274f] compiler_thread_entry(JavaThread*, Thread*)+0x4f
        V [libjvm.so+0xdc3734] JavaThread::thread_main_inner()+0x234
        V [libjvm.so+0xdc3b04] JavaThread::run()+0x314
        V [libjvm.so+0xbf4789] java_start(Thread*)+0x119
        C [libpthread.so.0+0x6a49]
        C [libc.so.6+0xe2aee] clone+0x5e


        Current CompileTask:
        C2: 175651 11341 !b 4 jdk.management.resource.SimpleMeter::request (252 bytes)

          1. hs_err_pid12680.log
            33 kB
          2. hs_err_pid29859.log
            65 kB
          3. JTwork.zip
            114 kB
          4. replay_pid25664.log
            194 kB
          5. replay_pid29859.log
            311 kB

              Assignee:
              Nils Eliasson (Inactive)
              Reporter:
              Boris Molodenkov
              Votes:
              0 Vote for this issue
              Watchers:
              15 Start watching this issue

                Created:
                Updated:
                Resolved: