8087128: C2: Disallow definition split on MachCopySpill nodes

Reviewed-by: kvn